# blitzer-cli

./: .#todo.org  .gitignore  CHANGELOG.org  LANGUAGE_PACK_GUIDE.org  MANIFEST.in  README.md  README.org  blitzer  pyproject.toml  test_exclusions.py  test_functionality.py  test_input.txt  test_slovenian.txt  todo.org  tox.ini
.github/workflows/: publish.yml  test.yml
blitzer_cli/: __init__.py  cli.py  config.py  data_manager.py  processor.py  utils.py
blitzer_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blitzer_cli/languages/: base.py  generic.py  pli.py  slv.py
plugins/: blitzer-language-pli  blitzer-language-slv  blitzer_language_pali  blitzer_language_slovenian
test_language_pack/: setup.py
test_language_pack/blitzer_language_tst/: tst_lexicon.db  tst_processor.py
test_language_pack/blitzer_language_tst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py  requirements.txt  run_tests.py  test_cli.py  test_config.py  test_data_manager.py  test_edge_cases.py  test_processor.py
