[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitzer-cli"
version = "0.0.6"
description = "A minimalist CLI tool for language text processing"
authors = [{name = "Blitzer Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "importlib-metadata; python_version < '3.8'",  # For plugin discovery in older Python
    "requests",  # For downloading language data files
    "tomli; python_version < '3.11'",  # TOML support for older Python versions
    "regex",  # Better regex support with Unicode properties
]

[project.scripts]
blitzer = "blitzer_cli.cli:cli"

[project.entry-points."blitzer.languages"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",           # show extra test summary
    "--strict-markers",  # strict marker handling
    "--strict-config"    # strict config handling
]

[tool.coverage.run]
source = ["blitzer_cli"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
    "*/__pycache__/*"
]